# LLM-Agents

latest_ai_dev/: pyproject.toml  report.md
latest_ai_dev/src/latest_ai_dev/: crew.py  main.py
my_crew/: pyproject.toml  report.md
my_crew/src/my_crew/: crew.py
