[project]
name = "latest_ai_dev"
version = "0.1.0"
description = "latest-ai-dev using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2",
]

[project.scripts]
latest_ai_dev = "latest_ai_dev.main:run"
run_crew = "latest_ai_dev.main:run"
train = "latest_ai_dev.main:train"
replay = "latest_ai_dev.main:replay"
test = "latest_ai_dev.main:test"
run_with_trigger = "latest_ai_dev.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
